--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "css": "less"
   },
   "scripts": {
+    "serve": "npm run dev:weapp",
+    "build": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -19,6 +21,7 @@
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
+    "devtools:weapp": "npm run build:weapp -- --watch --devtools",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -26,7 +29,9 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "tsc": "vue-tsc --noEmit --skipLibCheck",
+    "lint": "eslint --ext .vue --ext .js --ext .ts src/"
   },
   "browserslist": [
     "last 3 versions",
@@ -36,26 +41,38 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@nutui/nutui-taro": "^3.1.18",
+    "@tarojs/cli": "^3.4.9",
     "@tarojs/components": "3.4.8",
+    "@tarojs/plugin-framework-vue3": "3.4.8",
+    "@tarojs/plugin-html": "^3.4.9",
     "@tarojs/runtime": "3.4.8",
     "@tarojs/taro": "3.4.8",
-    "@tarojs/plugin-framework-vue3": "3.4.8",
+    "pinia": "^2.0.14",
+    "taro-plugin-pinia": "^1.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@tarojs/mini-runner": "3.4.8",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.8",
+    "@tarojs/plugin-vue-devtools": "^3.3.14",
     "@tarojs/webpack-runner": "3.4.8",
-    "babel-preset-taro": "3.4.8",
-    "@vue/compiler-sfc": "^3.0.0",
-    "vue-loader": "^16.0.0-beta.8",
-    "eslint-plugin-vue": "^8.0.0",
-    "eslint-config-taro": "3.4.8",
-    "eslint": "^8.12.0",
-    "stylelint": "^14.4.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "@typescript-eslint/parser": "^5.20.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "babel-plugin-import": "^1.13.3",
+    "babel-preset-taro": "3.4.8",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.4.8",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.0",
+    "husky": "^8.0.1",
+    "stylelint": "^14.4.0",
+    "typescript": "^4.1.0",
+    "vue-loader": "^16.0.0-beta.8",
+    "vue-tsc": "^0.34.12"
   }
 }
