--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
     "resolveJsonModule": true,
     "typeRoots": ["node_modules/@types"]
   },
+  "vueCompilerOptions": {
+    "experimentalDisableTemplateSupport": true
+  },
   "include": ["./src", "global.d.ts"],
   // 是否在保存文件时重新生成文件
   "compileOnSave": false
