--- a/project.config.json
+++ b/project.config.json
@@ -5,7 +5,7 @@
   "appid": "touristappid",
   "setting": {
     "urlCheck": true,
-    "es6": false,
+    "es6": true,
     "postcss": false,
     "minified": false
   },
